# SlackNotifyMaster

./: .gitignore  README.md  config.yaml  pyproject.toml
src/: master.py
